Last of the grids added

--- a/Grid-Site/css/site.css
+++ b/Grid-Site/css/site.css
@@ -1,6 +1,9 @@
 main>.container {
     padding: 60px 15px 0;
 }
+main>.container-fluid {
+    padding-top: 60px;
+}
 .herobg {
     width: 100%;
     background: url(/Grid-Site/img/GridBG.png);
