--- a/AddressBook/Views/Contacts/Create.cshtml
+++ b/AddressBook/Views/Contacts/Create.cshtml
@@ -67,8 +67,8 @@
                 <input type="file" asp-for="ImageFile" class="form-control" />
                 <span asp-validation-for="ImageData" class="text-danger"></span>
             </div>            
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group"> 
+                <input type="submit" value="Create" class="btn btn-primary" onclick="fileClicked(event)" onchange="fileChanged(event)" />
             </div>
         </form>
     </div>
@@ -79,5 +79,6 @@
 </div>
 
 @section Scripts {
+    
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
